
2019-01-02  Ron Norman <rjn@inglenet.com>
	* field.c: Check for duplicate LINE in REPORT and ignore it
	* codegen.c: Skip initialize to SPACES for REPORT lines as
	            all lines are cleared to SPACES

2018-09-11  Ron Norman <rjn@inglenet.com>
	* scanner.l: Duplicate 78/CONSTANT and then assign line number
	* tree.c: improved warnings to be more inclusive

2018-09-11  Ron Norman <rjn@inglenet.com>
	* tree.c,codegen.c: Added checks for cb_flag_remove_unreachable

2018-09-10  Ron Norman <rjn@inglenet.com>
	* flag.def: new compile option: 'remove-unreachable' defaults to on
	      So then -fno-remove-unreachable does not remove unreachable code
	* typeck.c: Checks cb_flag_remove_unreachable
	* cobc.c: If -g then clear cb_flag_remove_unreachable

2018-09-10  Ron Norman <rjn@inglenet.com>
	* tree.c: removed redundant warnings about xyz 'is always' TRUE/FALSE

2018-07-31  Ron Norman <rjn@inglenet.com>
	* config.def: Added 'cb_length_in_data_division' and if 'no' then
	            LENGTH OF is not allowed for 78 VALUEs
	* typeck.c: Checks cb_length_in_data_division
	           ACU Cobol variation on computing LENGTH OF occurs-fld
		   when no subscript is provided
	* typeck.c: Improved checks for cb_pretty_display 
	           All DISPLAY for LENGTH displays up to 10 digits as the
		   value is unsigned
	* typeck.c: IBM does not allow LENGTH for 78 VALUEs

2018-07-29  Ron Norman <rjn@inglenet.com>
	* config.def: Added 'cb_occurs_max_length_without_subscript'
	* typeck.c: Checks cb_occurs_max_length_without_subscript for 
	           ACU Cobol variation on computing LENGTH OF occurs-fld
		   when no subscript is provided

2018-07-12  Ron Norman <rjn@inglenet.com>
	* parser.y: Set CB_CALL_BY_CONTENT for literal parameters
	* codegen.c: Make copy of fields for BY CONTENT & BY VALUE

2018-07-05  Ron Norman <rjn@inglenet.com>
	* config.def: Added 'depending-on-not-fixed'
	* codegen.c,tree.h: Made 'chk_field_variable_size' extern